# svmacs

./: .gitignore  ALPHA1-CLI  CMakeLists.txt  Doxyfile  Doxyfile.in  License.txt  README  README.md  TODO  cmake_uninstall.cmake.in  distclean.sh  svmacs.kdevelop  svmacs.pro  test-svmacs.sh
cmake/Modules/: FindCppUnit.cmake  FindITPP.cmake  FindJACK.cmake  FindLibSVM.cmake  FindRLog.cmake  MacroAddDoxygen.cmake  MacroAddUnitTest.cmake  MacroBuildInfo.cmake
data/: config.in
include/: jackaudioio.hpp
libjackcpp/: CMakeLists.txt
source/: CMakeLists.txt  config.h.in  main.cpp  namespaces.dox  version.h.in
source/classifier/: classifier.h  svmclassifier.cpp  svmclassifier.h
source/cli/: svmaccli.cpp  svmaccli.h
source/engine/: engine.cpp  engine.h
source/exceptions/: exceptions.h
source/features/: ass.cpp  ass.h  energy.cpp  energy.h  feature.hpp  hr.cpp  hr.h  melfb.cpp  mfcc.cpp  mfcc.h  srf.cpp  srf.h  zcr.cpp  zcr.h
source/gui/: qdebugstream.h  svmacgui.h  svmacgui.ui  svmacgui1.cpp  svmacgui2.cpp
source/jack/: jackclient.cpp  jackclient.h  jackringbuffer.hpp  ringbufferread.h
source/model/: event.h  range.h
source/processor/: processor.cpp  processor.h
source/utils/: utils.h
src/: CMakeLists.txt  config.h.cmake  config.h.in  jackclient.cpp  jackclient.h  main.cpp  src.pro  svmacs.cpp  svmacs.h  svmacsgui.h  version.h.cmake
src/classifier/: classifier.h  svmclassifier.cpp  svmclassifier.h
src/cli/: svmaccli.cpp  svmaccli.h  svmacscli.h
src/engine/: engine.cpp  engine.h
src/exceptions/: exceptions.h
src/features/: ass.cpp  ass.h  energy.cpp  energy.h  feature.cpp  feature.h  hr.cpp  hr.h  melfb.cpp  mfcc.cpp  mfcc.h  processor.cpp  processor.h  srf.cpp  srf.h  zcr.cpp  zcr.h
src/gui/: svmacgui.cpp  svmacgui.h  svmacgui.ui  svmacgui1.cpp  svmacgui2.cpp  svmacguiutils.cpp  svmacsgui.cpp  svmacsgui.h  svmacsgui.ui
src/jack/: jackclient.cpp  jackclient.h  ringbufferread.cpp  ringbufferread.h
src/model/: classifier.h  event.cpp  event.h  m1  m1.ok  m1.old  melfb.it  model  model.ok  model.old  range.h  svmclassifier.cpp  svmclassifier.h
src/processor/: processor.cpp  processor.h  worker.cpp  worker.h
src/utils/: convert.h  execpath.cpp  execpath.h  itfile.h  plot.h  utils.cpp  utils.h  worker.cpp  worker.h
templates/: h
test/: CMakeLists.txt  testRunner.cpp  testUtils.h  test_features.cpp  testass.cpp  testconfig.h.cmake  testconfig.h.in  testenergy.cpp  testfail.cpp  testfeatures.cpp  testfeatures.h  testhr.cpp  testitpp.cpp  testlibsvm.cpp  testmfcc.cpp  testmodel.cpp  testringbuffer.cpp  testringbufferread.cpp  testsrf.cpp  testutils.cpp  testzcr.cpp
test/core/: CMakeLists.txt  CaseTest.h  FailTest.cpp  FailTest.h  FixtureTest.cpp  JackRingBufferTest.cpp  JackRingBufferTest.h  ProcessorTest.cpp  RingBufferReadTest.cpp  RingBufferReadTest.h  ScaleTest.cpp  itppTest.cpp  itppTest.h  libitppTest.cpp  libitppTest.h  libsvmTest.cpp  libsvmTest.h  signalsTest.h  utilsTest.cpp  utilsTest.h
test/data/: itpp_test.it  matlab_test.it
test/features/: AnotherTest.cpp  AnotherTest.h  AssTest.cpp  AssTest.h  CMakeLists.txt  EnergyTest.cpp  FeatureTester.cpp  FeatureTester.h  Fixture.h  HrTest.cpp  MfccTest.cpp  ProcessorTest.cpp  ProcessorTest.h  SrfTest.cpp  ZcrTest.cpp
test/itfile/: double.it  features.it  test_signal.it
test/lib/: CMakeLists.txt  CaseTest.cpp  FixtureTest.h  JackRingBufferTest.cpp  libitppTest.cpp  libitppTest.h  libsvmTest.cpp  signalsTest.cpp  threadsTest.cpp  threadsTest.h
test/matlab/: ass.m  computeFeaturesNew.m  dwc.m  energy.m  extract.m  findMaxima.m  generateMelFilters.m  getBands.m  hr.m  matlab.it  matlab.mat  mfcc.m  periodicity.m  sc.m  signal.it  signal.mat  srf.m  test.it  testSignal.cpp  zcr.m
test/model/: ScaleTest.cpp  ScaleTest.h
test/old/: test_features.cpp  testass.cpp  testenergy.cpp  testfeatures.h  testhr.cpp  testmfcc.cpp  testsrf.cpp  testzcr.cpp
test/processor/: ProcessorTest.cpp  ProcessorTest.h
test/utils/: path.h  testUtils.cpp  testUtils.h
